add 3 server regisries, 2 microservices, 1 api-gateway